SBVTestSuite/TestSuite/CompileTests/SCase/SCase05.stderr
SCase05.hs:12:14: error: [GHC-39584]
    " SCase05.hs:12:20: Parse error: EOF

    " In the quasi-quotation: [sCase| e + 1|]
   |
12 | t e = [sCase| e + 1|]
   |              ^^^^^^^^

